--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
         <nav>
             <ul>
                 <li>
-                    <a href="index.php">
+                    <a href="index.html">
                         <h3>Home</h3>
                     </a>
                 </li>
                 <li>
-                    <a href="about.php">
+                    <a href="about.html">
                         <h3>About</h3>
                     </a>
                 </li>
