--- a/index.html
+++ b/index.html
@@ -46,6 +46,6 @@
             </p>
         </main>
 
-        <script src="js/main.js"></script>
+        <script defer src="js/main.js"></script>
     </body>
 </html>
