--- a/index.html
+++ b/index.html
@@ -4,6 +4,25 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+        <!-- Apple Mobile Content -->
+        <meta name="apple-mobile-web-app-capable" content="yes" />
+        <link rel="apple-touch-icon" href="touch-icon-iphone.png" />
+        <link
+            rel="apple-touch-icon"
+            sizes="152x152"
+            href="attribute/img/test152.png"
+        />
+        <link
+            rel="apple-touch-icon"
+            sizes="180x180"
+            href="attribute/img/test180.png"
+        />
+        <link
+            rel="apple-touch-icon"
+            sizes="167x167"
+            href="attribute/img/test167.png"
+        />
+        <!-- Webapp Minifest -->
         <link rel="manifest" href="manifest.json" />
         <link rel="stylesheet" href="css/style.css" />
         <title>WEBAPP Manifest</title>
